GNOME Bugzilla – Bug 748380
miscellaneous xwayland fixes
Last modified: 2015-04-23 17:51:45 UTC
This bug has a few code clean ups and leak fixes to the xwayland code.
Created attachment 302256 [details] [review] xwayland: use out label for cleanup in start function The start function has a few exit paths that need to perform clean up of the lock file. This commit consolidates those exit paths at the end using an out label and gotos.
Created attachment 302257 [details] [review] xwayland: free lockfile in start function on error Right now we just leak the lockfile.
Created attachment 302258 [details] [review] xwayland: don't unlink lock file twice in stop function The stop function currently manually constructs the lock filename from the display number and also calls unlink on the same, already known lock filename from the manager struct. This commit gets rid fo the manual construction in favor of the saved lock filename.
Created attachment 302259 [details] [review] xwayland: rename lockfile to lock_file The missing underscore is inconsistent with the coding style of the surrounding code.
Created attachment 302260 [details] [review] xwayland: plug some leaks in stop function This commit makes sure the lockfile and display name are freed in meta_xwayland_stop.
Jasper looked at these and gave them the rubber stamp.
Attachment 302256 [details] pushed as 40cccb5 - xwayland: use out label for cleanup in start function Attachment 302257 [details] pushed as 33bfcf5 - xwayland: free lockfile in start function on error Attachment 302258 [details] pushed as a8a5da7 - xwayland: don't unlink lock file twice in stop function Attachment 302259 [details] pushed as 8937c32 - xwayland: rename lockfile to lock_file Attachment 302260 [details] pushed as eb56e0a - xwayland: plug some leaks in stop function